--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@ PageRank\ncaa2015.csv
 PageRank\ncaa2016.csv
 PageRank\ncaa2017.csv
 PageRank\top250movies.txt
-Profiling\names.txt
-Profiling\triangle.txt
-Profiling\triangle_large.txt
+#Profiling\names.txt
+#Profiling\triangle.txt
+#Profiling\triangle_large.txt
 SQL1\student_info.csv
 SQL1\student_grades.csv
 SQL1\us_earthquakes.csv
