--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ PageRank\ncaa2016.csv
 PageRank\ncaa2017.csv
 PageRank\top250movies.txt
 #Profiling\names.txt
-#Profiling\triangle.txt
+Profiling\triangle.txt
 #Profiling\triangle_large.txt
 SQL1\student_info.csv
 SQL1\student_grades.csv
